2008-03-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCloop.c (loopInvariants): applied fix for bug 1717943, thanks
	  Robert Larice
	* support/regression/tests/bug1717943.c: new, added

2008-03-30 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c (assignResultValue): Reverted reversal of order of bytewise
	  return value assignments introduced in last commit.

2008-03-30 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/gen.c (emitDebug, assignResultValue, genPlus, genMinus, genMult,
	  genJumpTab):
	  Use 16-bit instructions for addition in some additional cases,
	  implemented RFEs #1914251, #1914245, #1922090, #1921382, #1918323.

2008-03-30 Philipp Klaus Krause <pkk AT spth.de>
	* src/z80/ralloc.c (serialRegAssign, allocReg, tryAllocatingRegPair):
	  Implemented RFE #1921450, changed some debug messages.

2008-03-30 Borut Razem <borut.razem AT siol.net>

	* Small Device C Compiler 2.8.0 released
	* .version, doc/sdccman.lyx: changed sdcc version to 2.8.1
	* support/scripts/sdcc.nsi: added finish page; this version
	  was used for 2.8.0 release
	* doc/knownbugs.html: removed; magically generated by the build
	  process using gen_known_bugs.pl from now on

2008-03-23 Borut Razem <borut.razem AT siol.net>

	* src/pic/gen.h: Q&D solution for the bug, found by Jim Paris
	  and reverted it, since it was already fixed by Raphael ;-)
	* doc/knownbugs.html: updated for RC2

2008-03-22 Raphael Neider <rneider AT web.de>

	* src/SDCCicode.c (getPtrType): avoid unnecessary extra assignments
	  for PIC16 targets

2008-03-22 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (adjustArithmeticResult): fixed bug 1839299
	* support/regression/tests/bug1839277.c: added related testBug1839299

2008-03-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (opIsGptr, adjustArithmeticResult, genAddrOf, genAssign),
	* src/mcs51/gen.c (opIsGptr, adjustArithmeticResult, genAddrOf, genAssign):
	  fixed bug 1839277