@@ -1,3 +1,8 @@
+2008-03-31 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
+
+	* device/include/hc08/mc68hc908jkjl.h: committed fix for bug #1929739,
+	  thanks Alejandro Pustowka <alejo_pustowka AT yahoo.com.mx>
+
 2008-03-30 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/SDCCloop.c (loopInvariants): applied fix for bug 1717943, thanks
